@@ -1,3 +1,7 @@
+2001-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* Gamemenu_gump.cc, VideoOptions_gump.cc: recenter gamemenu gump after
+	changing resolution in the video options gump
+
 2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* configure.in: cleaned up some more (especially C++ comp. detection)
 	* gamewin.cc: fixed palette glitch in plasma screen
